test/stg/error/funArg1.stg
-- Duplicate function arguments
badArgs = FUN(x x -> y);